Can't change the color of the text of the Playhead #77116

Closed
opened 2020-05-27 22:24:37 +02:00 by ThinkingPolygons · 13 comments

Short description
Can't change the color of the text of the Playhead in the Themes settings.
image.png
In 2.80 and below, the color of the text of the Playhead was linked to the "Text Highlight" theme setting of the respective editor.

Exact steps for others to reproduce the error
Go to Preferences/Themes/Dope Sheet/Theme Space, then try to change the color of the "Text Highlight". Nothing happens.
If you do the same in 2.80, it works

**Short description** Can't change the color of the text of the Playhead in the Themes settings. ![image.png](https://archive.blender.org/developer/F8558560/image.png) In 2.80 and below, the color of the text of the Playhead was linked to the "Text Highlight" theme setting of the respective editor. **Exact steps for others to reproduce the error** Go to Preferences/Themes/Dope Sheet/Theme Space, then try to change the color of the "Text Highlight". Nothing happens. If you do the same in 2.80, it works

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

Added subscriber: @torrent-1

Added subscriber: @torrent-1

I confirm this bug.
Once I tried to change that color because of the custom theme that I use, and yes it's broken.

I confirm this bug. Once I tried to change that color because of the custom theme that I use, and yes it's broken.
Germano Cavalcante changed title from Can't change the color of the text of the Playhead to Change color of the text of the Playhead 2020-05-29 15:25:11 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @WilliamReynish, @mano-wii

Added subscribers: @WilliamReynish, @mano-wii

This is not a bug, but it would be a good task for #56950 (UI Paper Cuts (Parent Task)).
@WilliamReynish, what do you think?

(Feel free to close otherwise).

This is not a bug, but it would be a good task for #56950 (UI Paper Cuts (Parent Task)). @WilliamReynish, what do you think? (Feel free to close otherwise).

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez

In #77116#940796, @mano-wii wrote:
This is not a bug

This is a bug, because it worked before, and now it's broken. Even @pablovazquez acknowledged that on blender chat .
This bug was introduced during the implementation of the scrubbing area in the animation editors. I commented about it there D4654#110441 but the playhead issue was never fixed .

> In #77116#940796, @mano-wii wrote: > This is not a bug This is a bug, because it worked before, and now it's broken. Even @pablovazquez acknowledged that on [blender chat ](https://blender.chat/channel/user-interface-module?msg=ttYzmKQ9cap2QwFQw). This bug was introduced during the implementation of the scrubbing area in the animation editors. I commented about it there [D4654](https://archive.blender.org/developer/D4654)#110441 but the playhead issue was [never fixed ](https://developer.blender.org/D4654#124304).

And what's with the renaming? It kinda makes no sense now.

And what's with the renaming? It kinda makes no sense now.

Yo @mano-wii this is a bug man. 😁

Yo @mano-wii this is a bug man. 😁

Oops, I didn't see there is an option to change the color.
My bad, sorry

Oops, I didn't see there is an option to change the color. My bad, sorry
Germano Cavalcante changed title from Change color of the text of the Playhead to Can't change the color of the text of the Playhead 2020-05-30 04:10:02 +02:00

This issue was referenced by 046afacbc6

This issue was referenced by 046afacbc69069a2244f10a3a38e2f8afd8a5f39
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2020-06-15 14:36:19 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77116
No description provided.